force-app/main/default/objects/Credit_Note_Adjustment__c/Credit_Note_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Credit Note Adjustment</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Credit Note Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>