force-app/main/default/objects/Credit_Note_Adjustment__c/fields/Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Transaction</label>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipLabel>Credit Note Adjustments</relationshipLabel>
    <relationshipName>Credit_Note_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>