force-app/main/default/objects/Credit_Note_Adjustment__c/fields/SafeGuard__c.field-meta.xml
<CustomField>
    <fullName>SafeGuard__c</fullName>
    <formula>if(OR(
 NOT(ISBLANK(Credit_Note__r.Intacct_ID__c))
), 
&quot;Can&apos;t delete this credit note adjustment!&quot;,
&apos;&apos;)</formula>
    <label>SafeGuard</label>
    <type>Text</type>
</CustomField>