force-app/main/default/objects/Credit_Note_Adjustment__c/fields/Virtual_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Virtual Credit Note</label>
    <referenceTo>Credit_Note__c</referenceTo>
    <relationshipLabel>Credit Note Adjustments (Virtual Credit Note)</relationshipLabel>
    <relationshipName>Credit_Note_Adjustments1</relationshipName>
    <type>Lookup</type>
</CustomField>