force-app/main/default/objects/Credit_Note_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Credit_Note__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Virtual_Credit_Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>